k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: retailmonolith
  labels:
    name: retailmonolith
    environment: production
